--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,26 +8,21 @@ on:
 jobs:
   test:
     name: Run Tests
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
     
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.2'
-        extensions: mbstring, xml, ctype, json, bcmath, pdo, mysql, gd, zip
-        
     - name: Copy .env
-      run: cp .env.example .env
+      run: |
+        if [ ! -f .env ]; then
+          cp .env.example .env
+          php artisan key:generate
+        fi
         
     - name: Install Composer Dependencies
       run: composer install --prefer-dist --no-interaction
-      
-    - name: Generate Application Key
-      run: php artisan key:generate
       
     - name: Set Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
@@ -44,7 +39,7 @@ jobs:
       run: php artisan migrate --force
       
     - name: Install NPM Dependencies
-      run: npm ci
+      run: npm install
       
     - name: Build Assets
       run: npm run build
@@ -52,52 +47,48 @@ jobs:
   deploy:
     name: Deploy to Server
     needs: test
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
     
     steps:
-    - name: Deploy via SSH
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        port: 22
-        script: |
-          cd ~/Delia-s
-          
-          echo "🔄 Pulling latest changes..."
-          git pull origin main
-          
-          echo "📦 Installing PHP dependencies..."
-          composer install --no-dev --optimize-autoloader --no-interaction
-          
-          echo "📦 Installing NPM dependencies..."
-          npm ci
-          
-          echo "🏗️ Building assets..."
-          npm run build
-          
-          echo "🧹 Clearing caches..."
-          php artisan config:clear
-          php artisan cache:clear
-          php artisan view:clear
-          php artisan route:clear
-          
-          echo "🗄️ Running migrations..."
-          php artisan migrate --force
-          
-          echo "⚡ Optimizing application..."
-          php artisan config:cache
-          php artisan route:cache
-          php artisan view:cache
-          php artisan optimize
-          
-          echo "🔐 Setting permissions..."
-          chmod -R 775 storage bootstrap/cache
-          
-          if [ -f "docker-compose.yml" ]; then
-            echo "🐳 Restarting Docker containers..."
-            docker-compose restart
-          fi
-          echo "✅ Deployment completed successfully!"
+    - name: Checkout code
+      uses: actions/checkout@v3
+      
+    - name: Deploy Application
+      run: |
+        echo "🔄 Pulling latest changes..."
+        git pull origin main
+        
+        echo "📦 Installing PHP dependencies..."
+        composer install --no-dev --optimize-autoloader --no-interaction
+        
+        echo "📦 Installing NPM dependencies..."
+        npm ci
+        
+        echo "🏗️ Building assets..."
+        npm run build
+        
+        echo "🧹 Clearing caches..."
+        php artisan config:clear
+        php artisan cache:clear
+        php artisan view:clear
+        php artisan route:clear
+        
+        echo "🗄️ Running migrations..."
+        php artisan migrate --force
+        
+        echo "⚡ Optimizing application..."
+        php artisan config:cache
+        php artisan route:cache
+        php artisan view:cache
+        php artisan optimize
+        
+        echo "🔐 Setting permissions..."
+        chmod -R 775 storage bootstrap/cache
+        
+        if [ -f "docker-compose.yml" ]; then
+          echo "🐳 Restarting Docker containers..."
+          docker-compose restart
+        fi
+        
+        echo "✅ Deployment completed successfully!"
